--- a/media/css/user.css
+++ b/media/css/user.css
@@ -5,63 +5,195 @@
 @import "compass/typography/vertical_rhythm"; // Helps set up a vertical rhythm.
 @import "zen";              // Add the Zen Grids responsive layout mixins.
 */
-/* line 3, ../scss/user.scss */
+/* line 4, ../scss/user.scss */
+.profile h2 {
+  color: #555;
+}
+
+/* line 9, ../scss/user.scss */
 .quickstats {
   display: inline-block;
   float: left;
+  padding: 0 30px 0 0;
+  border-style: solid;
+  -moz-border-image: url(../images/noiseDivider.png) 0 2 0 0 repeat repeat;
+  -webkit-border-image: url(../images/noiseDivider.png) 0 2 0 0 repeat repeat;
+  -webkit-border-image: url(../images/noiseDivider.png) 0 2 0 0 repeat repeat;
+  -o-border-image: url(../images/noiseDivider.png) 0 2 0 0 repeat repeat;
+  border-image: url(../images/noiseDivider.png) 0 2 0 0 repeat repeat;
+  border-width: 0px 2px 0px 0px;
+  width: 218px;
 }
-/* line 8, ../scss/user.scss */
-.quickstats dl {
+/* line 18, ../scss/user.scss */
+.quickstats .membership {
   display: block;
-  width: 234px;
-  background: #eee;
-  padding: 0 8px;
-}
-/* line 15, ../scss/user.scss */
-.quickstats dt, .quickstats dd {
-  display: inline-block;
-  max-width: 125px;
-  width: 50%;
-  padding: 0.5em 0;
-}
-/* line 22, ../scss/user.scss */
-.quickstats dd {
-  text-align: right;
+  color: #999;
   font-size: 0.8em;
 }
-/* line 26, ../scss/user.scss */
+/* line 24, ../scss/user.scss */
+.quickstats .avatar {
+  width: 188px;
+  height: 188px;
+  border: 2px solid #d1d1d1;
+}
+/* line 30, ../scss/user.scss */
+.quickstats .steamId {
+  display: block;
+  text-align: right;
+  color: #999;
+  font-size: 0.8em;
+}
+/* line 37, ../scss/user.scss */
+.quickstats h3 {
+  border-style: solid;
+  border-color: #e9e9e9;
+  -moz-border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  -webkit-border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  -webkit-border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  -o-border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  border-width: 0px 0px 2px 0px;
+  text-align: right;
+}
+/* line 42, ../scss/user.scss */
+.quickstats dl {
+  display: block;
+  width: 188px;
+  background: #eee;
+  margin: 0;
+  padding: 0;
+}
+/* line 50, ../scss/user.scss */
+.quickstats dt, .quickstats dd {
+  display: inline-block;
+  padding: 0.25em 8px;
+  vertical-align: top;
+  max-width: 94px;
+  width: 50%;
+  white-space: nowrap;
+  overflow: visible;
+}
+/* line 59, ../scss/user.scss */
+.quickstats dt:nth-of-type(even), .quickstats dd:nth-of-type(even) {
+  background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
+}
+/* line 64, ../scss/user.scss */
+.quickstats dt {
+  letter-spacing: -1px;
+}
+/* line 67, ../scss/user.scss */
+.quickstats dd {
+  text-align: right;
+}
+/* line 73, ../scss/user.scss */
 .quickstats dd a:after {
   display: none;
 }
 
-/* line 32, ../scss/user.scss */
+/* line 79, ../scss/user.scss */
 .statsDetailed {
   float: left;
+  padding: 0 0 0 30px;
+  width: 530px;
 }
-/* line 36, ../scss/user.scss */
+/* line 87, ../scss/user.scss */
 .statsDetailed ul.tabs {
   display: inline-block;
   list-style: none;
   margin: 0 0 0.5em 0;
+  padding: 0 1em 1em 1em;
+  border-style: solid;
+  border-color: #e9e9e9;
+  -moz-border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  -webkit-border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  -webkit-border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  -o-border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  border-width: 0px 0px 2px 0px;
+  font-family: 'Arvil Sans', Arial;
+  font-size: 1.5em;
+  width: 500px;
 }
-/* line 41, ../scss/user.scss */
+/* line 97, ../scss/user.scss */
 .statsDetailed ul.tabs li {
   display: inline-block;
 }
-/* line 44, ../scss/user.scss */
-.statsDetailed ul.tabs li.selected a {
-  border-color: red;
-}
-/* line 48, ../scss/user.scss */
+/* line 100, ../scss/user.scss */
 .statsDetailed ul.tabs li a {
-  padding: 0.25em;
-  border: 1px solid black;
+  padding: 0 0.25em;
+  color: #555;
+  border-bottom: 2px solid transparent;
 }
-/* line 55, ../scss/user.scss */
+/* line 106, ../scss/user.scss */
+.statsDetailed ul.tabs li a:hover {
+  border-bottom-color: #555;
+  text-decoration: none;
+}
+/* line 112, ../scss/user.scss */
+.statsDetailed ul.tabs li.selected a {
+  color: #25bfff;
+  border-bottom: 2px solid #25bfff;
+}
+/* line 120, ../scss/user.scss */
 .statsDetailed .tabItem {
   display: none;
 }
-/* line 58, ../scss/user.scss */
+/* line 123, ../scss/user.scss */
 .statsDetailed .tabItem.selected {
   display: block;
+}
+/* line 128, ../scss/user.scss */
+.statsDetailed h2 {
+  background: url(../images/noiseBlackLight.png) repeat left center #636363;
+  color: #fff;
+  margin: 1em 0 0 0;
+  padding: 0.5em 1em;
+  font-size: 1em;
+  font-weight: bold;
+}
+/* line 137, ../scss/user.scss */
+.statsDetailed dl, .statsDetailed .stats {
+  display: block;
+  width: 500px;
+  background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
+  margin: 0;
+  padding: 0;
+  border-style: solid;
+  border-color: #636363;
+  -moz-border-image: url(../images/noiseBlackLight.png) 0 1 1 1 repeat repeat;
+  -webkit-border-image: url(../images/noiseBlackLight.png) 0 1 1 1 repeat repeat;
+  -webkit-border-image: url(../images/noiseBlackLight.png) 0 1 1 1 repeat repeat;
+  -o-border-image: url(../images/noiseBlackLight.png) 0 1 1 1 repeat repeat;
+  border-image: url(../images/noiseBlackLight.png) 0 1 1 1 repeat repeat;
+  border-width: 0px 1px 1px 1px;
+}
+/* line 146, ../scss/user.scss */
+.statsDetailed .stats {
+  padding: 0.5em;
+}
+/* line 150, ../scss/user.scss */
+.statsDetailed dt, .statsDetailed dd {
+  display: inline-block;
+  padding: 0.25em 8px;
+  vertical-align: top;
+  max-width: 250px;
+  width: 50%;
+  white-space: nowrap;
+  overflow: visible;
+}
+/* line 159, ../scss/user.scss */
+.statsDetailed dt:nth-of-type(even), .statsDetailed dd:nth-of-type(even) {
+  background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
+}
+/* line 164, ../scss/user.scss */
+.statsDetailed dt {
+  letter-spacing: -1px;
+}
+/* line 167, ../scss/user.scss */
+.statsDetailed dd {
+  text-align: right;
+}
+/* line 173, ../scss/user.scss */
+.statsDetailed dd a:after {
+  display: none;
 }
