--- a/media/css/user.css
+++ b/media/css/user.css
@@ -9,8 +9,13 @@
 .profile h2 {
   color: #555;
 }
+/* line 8, ../scss/user.scss */
+.profile .modDropdown {
+  right: 30px;
+  position: absolute;
+}
 
-/* line 9, ../scss/user.scss */
+/* line 14, ../scss/user.scss */
 .quickstats {
   display: inline-block;
   float: left;
@@ -24,26 +29,26 @@
   border-width: 0px 2px 0px 0px;
   width: 218px;
 }
-/* line 18, ../scss/user.scss */
+/* line 23, ../scss/user.scss */
 .quickstats .membership {
   display: block;
   color: #999;
   font-size: 0.8em;
 }
-/* line 24, ../scss/user.scss */
+/* line 29, ../scss/user.scss */
 .quickstats .avatar {
   width: 188px;
   height: 188px;
   border: 2px solid #d1d1d1;
 }
-/* line 30, ../scss/user.scss */
+/* line 35, ../scss/user.scss */
 .quickstats .steamId {
   display: block;
   text-align: right;
   color: #999;
   font-size: 0.8em;
 }
-/* line 37, ../scss/user.scss */
+/* line 42, ../scss/user.scss */
 .quickstats h3 {
   border-style: solid;
   border-color: #e9e9e9;
@@ -55,7 +60,7 @@
   border-width: 0px 0px 2px 0px;
   text-align: right;
 }
-/* line 42, ../scss/user.scss */
+/* line 47, ../scss/user.scss */
 .quickstats dl {
   display: block;
   width: 188px;
@@ -63,7 +68,7 @@
   margin: 0;
   padding: 0;
 }
-/* line 50, ../scss/user.scss */
+/* line 55, ../scss/user.scss */
 .quickstats dt, .quickstats dd {
   display: inline-block;
   padding: 0.25em 8px;
@@ -73,30 +78,30 @@
   white-space: nowrap;
   overflow: visible;
 }
-/* line 59, ../scss/user.scss */
+/* line 64, ../scss/user.scss */
 .quickstats dt:nth-of-type(even), .quickstats dd:nth-of-type(even) {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
 }
-/* line 64, ../scss/user.scss */
+/* line 69, ../scss/user.scss */
 .quickstats dt {
   letter-spacing: -1px;
 }
-/* line 67, ../scss/user.scss */
+/* line 72, ../scss/user.scss */
 .quickstats dd {
   text-align: right;
 }
-/* line 73, ../scss/user.scss */
+/* line 78, ../scss/user.scss */
 .quickstats dd a:after {
   display: none;
 }
 
-/* line 79, ../scss/user.scss */
+/* line 84, ../scss/user.scss */
 .statsDetailed {
   float: left;
   padding: 0 0 0 30px;
   width: 530px;
 }
-/* line 87, ../scss/user.scss */
+/* line 92, ../scss/user.scss */
 .statsDetailed ul.tabs {
   display: inline-block;
   list-style: none;
@@ -114,35 +119,35 @@
   font-size: 1.5em;
   width: 500px;
 }
-/* line 97, ../scss/user.scss */
+/* line 102, ../scss/user.scss */
 .statsDetailed ul.tabs li {
   display: inline-block;
 }
-/* line 100, ../scss/user.scss */
+/* line 105, ../scss/user.scss */
 .statsDetailed ul.tabs li a {
   padding: 0 0.25em;
   color: #555;
   border-bottom: 2px solid transparent;
 }
-/* line 106, ../scss/user.scss */
+/* line 111, ../scss/user.scss */
 .statsDetailed ul.tabs li a:hover {
   border-bottom-color: #555;
   text-decoration: none;
 }
-/* line 112, ../scss/user.scss */
+/* line 117, ../scss/user.scss */
 .statsDetailed ul.tabs li.selected a {
   color: #25bfff;
   border-bottom: 2px solid #25bfff;
 }
-/* line 120, ../scss/user.scss */
+/* line 125, ../scss/user.scss */
 .statsDetailed .tabItem {
   display: none;
 }
-/* line 123, ../scss/user.scss */
+/* line 128, ../scss/user.scss */
 .statsDetailed .tabItem.selected {
   display: block;
 }
-/* line 128, ../scss/user.scss */
+/* line 133, ../scss/user.scss */
 .statsDetailed h2 {
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
   color: #fff;
@@ -151,7 +156,7 @@
   font-size: 1em;
   font-weight: bold;
 }
-/* line 137, ../scss/user.scss */
+/* line 142, ../scss/user.scss */
 .statsDetailed dl, .statsDetailed .stats {
   display: block;
   width: 500px;
@@ -167,11 +172,11 @@
   border-image: url(../images/noiseBlackLight.png) 0 1 1 1 repeat repeat;
   border-width: 0px 1px 1px 1px;
 }
-/* line 146, ../scss/user.scss */
+/* line 151, ../scss/user.scss */
 .statsDetailed .stats {
   padding: 0.5em;
 }
-/* line 150, ../scss/user.scss */
+/* line 155, ../scss/user.scss */
 .statsDetailed dt, .statsDetailed dd {
   display: inline-block;
   padding: 0.25em 8px;
@@ -181,19 +186,19 @@
   white-space: nowrap;
   overflow: visible;
 }
-/* line 159, ../scss/user.scss */
+/* line 164, ../scss/user.scss */
 .statsDetailed dt:nth-of-type(even), .statsDetailed dd:nth-of-type(even) {
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
 }
-/* line 164, ../scss/user.scss */
+/* line 169, ../scss/user.scss */
 .statsDetailed dt {
   letter-spacing: -1px;
 }
-/* line 167, ../scss/user.scss */
+/* line 172, ../scss/user.scss */
 .statsDetailed dd {
   text-align: right;
 }
-/* line 173, ../scss/user.scss */
+/* line 178, ../scss/user.scss */
 .statsDetailed dd a:after {
   display: none;
 }
