--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -58,6 +58,7 @@ a {
   //@include box-shadow(0 0 1em rgba(0,0,0,0.125));
   @include border-radius(0.25em);
   @include box-shadow(rgba(#000, 0.1) 0 0 0.25em);
+  position: relative;
 }
 
 .clr {
@@ -223,6 +224,7 @@ $tags: (vip, mod, admin, dev, super, owner);
 }
 
 .modButton {
+
   &.active {
     @include noise(Blue);
     z-index: 1000;
@@ -233,6 +235,10 @@ $tags: (vip, mod, admin, dev, super, owner);
 .modDropdown {
   display: inline-block;
   position: relative;
+
+  &:hover {
+    @include noise(BlackLight);
+  }
 
   //  .star {
   //    width: 16px;
@@ -269,7 +275,7 @@ $tags: (vip, mod, admin, dev, super, owner);
         color: #fff;
         display: block;
         white-space: pre;
-        padding: 0 0.5em;
+        padding: 0 40px 0 8px;
         @include noise(Black);
         line-height: 32px;
 
@@ -280,9 +286,10 @@ $tags: (vip, mod, admin, dev, super, owner);
       }
 
       &.userActions {
-        padding: 0 8px;
+        padding: 0 16px;
         line-height: 32px;
         color: #fff;
+        font-weight: bold;
       }
     }
 
